# VolumeHologramApp

./: LICENSE  README.md  app.py  create_venv.bat  create_venv_version.bat  requirements.txt  requirements_version.txt  run_hologram_app.bat
VolumeHologramEvaluationCPP/: CMakeLists.txt  InputFileCreator.ipynb
VolumeHologramEvaluationCPP/src/: CalcAllScatterMatrices.cpp  CalcAllScatterMatrices.h  CalculatorDiffractionEfficiency.cpp  CalculatorDiffractionEfficiency.h  DeviceCreator.cpp  DeviceCreator.h  EigenValuesVectors.cpp  EigenValuesVectors.h  HoeEvaluation.cpp  HoeEvaluation.h  HoeWriter.cpp  HoeWriter.h  LayerData.cpp  LayerData.h  Parameter.cpp  Parameter.h  RCWAHologram.cpp  ScatterMatrix.cpp  ScatterMatrix.h  SystemParameters.cpp  SystemParameters.h  VolumeHologram3D.cpp  VolumeHologram3D.h  constants.h
assets/: style_app.css  style_controller.css  style_display.css  style_logger.css  style_parameter.css  style_store.css
callbacks/: controller_callbacks.py  logger_callbacks.py  parameter_callbacks.py  store_callbacks.py
layouts/: app_layout.py  controller_layout.py  display_layout.py  logger_layout.py  parameter_layout.py  store_layout.py
rcwa/: calculator_diffraction_efficiency.py  calculator_scatter_matrix.py  hoe_thickness_dependence.py  layer_data.py  parameter.py  rcwa_exception.py  rcwa_help_function.py  scatter_matrix.py  volume_hologram_3D.py
source/: app_controller.py  data_container.py  display_controller.py  hoe_in_loop.py  hoe_logger.py  hoe_parameter_creator.py  manager_controller.py  parameter.py  parameter_controller.py  (+1 more)
